# jdan734.me

./: .gitignore  404.html  500.html  CNAME  README.md  a.html  api.html  app.py  base.html  bot.html  build.py  demo.html  ftp.html  ftp.py  gulpfile.js  habr.html  index.html  index.py  index_old.html  kanobu.html  kanobu_project.html  ligatures.html  lorem.html  neo_kanobu.html  package-lock.json  package.json  pyproject.toml  requirements.txt  rss.xml  server.dev.py  server.py  site.md  test.html  timer.html  wiki.html  wikipage.html  wikipedia.py
css/: atom-one-dark.css  pico.min.css  style.css  test.css
dev/: readme.md
dev/pug/: 404.pug  500.pug  a.pug  bot.pug  demo.pug  ftp.pug  index.pug  kanobu.pug  kanobu_project.pug  ligatures.pug  lorem.pug  neo_kanobu.pug  test.pug  (+2 more)
html/: 404.html  500.html  api.html  bot.html  code.html  demo.html  index.html  kanobu.html  ligatures.html  lorem.html  projects.html  test.html  wiki.html
old/: 404.html  500.html  api.html  base.html  bootstrap.html  bot.html  code.html  demo.html  ftp.html  habr.html  index.html  kanobu.html  ligatures.html  lorem.html  projects.html  rss.xml  stats.html  test.html  wiki.html  wikipage.html
pug/: index.pug
sass/: style.sass
scss/: font.scss  style.scss
server/: __init__.py  api.py  db.py  error.py  habr.py  haiku.py  main.py  models.py  pavel.py  server.py  wiki.py
templates/: 404.html  500.html  api.html  base.html  bootstrap.html  ftp.html  habr.html  index.html  lorem.html  memepedia.html  memepedia_page.html  new_index.html  rss.xml  stats.html  wiki.html  wikipage.html
(+61 files in other folders)
