[tool.poetry]
name = "jdan735.github.io"
version = "0.0.0"
description = ""
authors = ["Daniel Zakharov <daniel734@bk.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
# pymemeru = {path = "../pymemeru"}
fastapi = "^0.75.1"
sanic = "^22.3.1"
lxml = "^4.8.0"
Jinja2 = "^3.1.2"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.11.1"
wikipya = "^4.0.1"
uvicorn = "^0.17.6"
pymemeru = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
